--- a/index.html
+++ b/index.html
@@ -1,13 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <META HTTP-EQUIV="REFRESH" CONTENT="2;URL=./inicio/inicio.php">
+    <title>Ajedrez</title>
 </head>
-<body>
-    <h1>Bienvenido!!</h1>
-    redirigiendo....
+
+<body class="gradient-border">
+    <div>
+        <a href="./juegos/offline.php">Ajedrez Offline</a>
+    </div>
+    <div>
+        <a href="./juegos/online.php">Ajedrez Online</a>
+    </div>
+    <div>
+        
+        <a href="./juegos/ia.php">Ajedrez AI</a>
+    </div>
 </body>
+<style>
+    html {
+        background-color: rgb(17, 4, 4);
+        text-align: center;
+        align-items: center;
+    }
+
+    body {
+        text-align: center;
+        align-items: center;
+        margin: 10vw;
+        background-color: rgb(36, 36, 67);
+        height: 30vw;
+        margin-left: 30vw;
+        margin-right: 30vw;
+        border-radius: 2vw;
+        ;
+    }
+
+    div {
+        padding-top: 3vw;
+    }
+
+    a {
+        font-size: 5vw;
+        text-decoration: none;
+        color: rgb(149, 29, 29);
+    }
+
+    a:hover {
+        color: red;
+        color: #705e18;
+    }
+
+    .gradient-border {
+        --border-width: 3px;
+
+        position: relative;
+        justify-content: center;
+        align-items: center;
+        width: 50vw;
+        height: 30vw;
+        font-family: Lato, sans-serif;
+        font-size: 2.5rem;
+        text-transform: uppercase;
+        color: white;
+        background: #222;
+        border-radius: var(--border-width);
+
+        &::after {
+            position: absolute;
+            content: "";
+            top: calc(-1 * var(--border-width));
+            left: calc(-1 * var(--border-width));
+            z-index: -1;
+            width: calc(100% + var(--border-width) * 2);
+            height: calc(100% + var(--border-width) * 2);
+            background: linear-gradient(60deg,
+                    hsl(224, 85%, 66%),
+                    hsl(269, 85%, 66%),
+                    hsl(314, 85%, 66%),
+                    hsl(359, 85%, 66%),
+                    hsl(44, 85%, 66%),
+                    hsl(89, 85%, 66%),
+                    hsl(134, 85%, 66%),
+                    hsl(179, 85%, 66%));
+            background-size: 300% 300%;
+            background-position: 0 50%;
+            border-radius: calc(2 * var(--border-width));
+            animation: moveGradient 4s alternate infinite;
+        }
+    }
+
+    @keyframes moveGradient {
+        50% {
+            background-position: 100% 50%;
+        }
+    }
+</style>
+
 </html>
